# IncludeOS

./: .gitmodules  CMakeLists.txt  README.md  cross-shell.nix  develop-arm.nix  doc-shell.nix  overlay.nix  x86_64-shell.nix
IncludeOS-aarch64/: .gitignore  default.nix  develop-arm.nix  uboot-aarch64.nix
IncludeOS-aarch64/example/: CMakeLists.txt
api/: smp  smp_utils
api/arch/: aarch64.hpp
api/hw/: pci_device.hpp
api/kernel/: memmap.hpp
api/util/: uri.hpp
api/virtio/: virtio.hpp
cmake/: includeos-config.cmake.in  includeos.cmake  os.cmake  utils.cmake
example/: CMakeLists.txt
src/: CMakeLists.txt
src/arch/aarch64/: arch_start.asm  paging.cpp
src/drivers/: CMakeLists.txt
src/kernel/: events.cpp
src/musl/: sigaltstack.cpp  syscall_n.cpp
src/platform/aarch64_vm/: CMakeLists.txt  init_libc.cpp  kernel_aarch64_hello.c
src/posix/: file_fd.cpp
src/util/: CMakeLists.txt  logger.cpp  percent_encoding.cpp
